<resources>
    <string name="app_name">InstagrammApp</string>
    <string name="toolbar_user">user</string>
    <string name="edit_profile">Edit profile</string>
    <string name="null_number">0</string>
    <string name="posts_title">posts</string>
    <string name="followers_title">followers</string>
    <string name="following_title">following</string>
    <string name="home">Home</string>
    <string name="create_account">Don\'t have an account? <b>Sign up.</b> </string>
    <string name="please_enter_password">Please enter your password</string>
</resources>
